--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "request-header-parser-microservice",
   "version": "0.0.2",
   "description": "API project for freeCodeCamp",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
